--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
 .item p {
   color: var(--n-Very-light-gray);
   font-family: "Lexend Deca", sans-serif;
+  line-height:1.6;
   margin-top: 1.5rem;
   margin-bottom: 6rem;
 }
@@ -53,21 +54,26 @@
   background: var(--n-Very-light-gray);
   border: 2px solid hsl(0, 0%, 95%);
   text-align: center;
-  padding: 12px 18px;
+  padding: 11px 22px;
   bottom: 0;
   margin-bottom: 2rem;
   border-radius: 30px;
   color: var(--p-Dark-cyan);
+  letter-spacing: 1px;
   cursor: pointer;
 }
 .first {
   background-color: var(--p-Bright-orange);
+  border-top-left-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
 }
 .second {
   background-color: var(--p-Dark-cyan);
 }
 .third {
   background-color: var(--p-Very-dark-cyan);
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 .first button {
   color: var(--p-Bright-orange);
