--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend:wght@100;200&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap");
 * {
   box-sizing: border;
@@ -44,7 +44,9 @@
 .item p {
   color: var(--n-Very-light-gray);
   font-family: "Lexend Deca", sans-serif;
-  line-height:1.6;
+  letter-spacing: 1px;
+  font-weight: 100;
+  line-height: 1.6;
   margin-top: 1.5rem;
   margin-bottom: 6rem;
 }
